# OptimaAI_UW

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_real_extractor.py  trigger_ci.txt
.github/workflows/: ci.yml  tests.yml
src/optimaai_uw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/optimaai_uw/agents/: __init__.py  compliance_agent.py  eligibility_agent.py  final_json_builder_agent.py  hybrid_normalizer_agent.py  intake_agent.py  scoring_agent.py  underwriting_summary_agent.py
src/optimaai_uw/compliance/: rule_evaluator.py  rulebook_loader.py  smart_rule_extractor.py  state_compliance_pdf_to_json.py  state_rule_extractor.py
src/optimaai_uw/core/: DAG_orchestrator.py  base_agent.py  orchestrator.py
src/optimaai_uw/pdf_renderer/: ai_insights.py  compliance_summary.py  coverage_table.py  data_lineage.py  decision_block.py  header_layout.py  pdf_orchestrator.py  pricing_breakdown.py  risk_narrative.py  sample_input.json
src/optimaai_uw/pdf_schema/: pdf_schema.json
tests/: conftest.py  test_compliance_agent.py  test_dag_orchestrator.py  test_eligibility_agent.py  test_final_json_builder_agent.py  test_generate_pdf.py  test_hybrid_normalization_agent.py  test_intake_agent.py  test_scoring_agent.py  test_smart_rule_extractor.py  test_underwriting_summary_agent.py
