[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optimaai_uw"
version = "0.1.0"
description = "OptimaAI Underwriting Engine"
authors = [
    { name = "Sekhar" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
